--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -11,15 +11,17 @@
                 class="nav-forum"
                 id="nav-forum"
                 rel="noopener noreferrer"
-                href="{% t 'links:nav.forum' %}"
+                href="{% t 'links:forum' %}"
                 target="_blank"
+                data-test-label="forum-button"
             >{% t 'buttons.forum' %}</a>
             <a
                 class="toggle-button-nav"
                 id="nav-donate"
                 rel="noopener noreferrer"
-                href="{% t 'links:nav.donate' %}"
+                href="{% t 'links:donate' %}"
                 target="_blank"
+                data-test-label="donate-button"
             >{% t 'buttons.donate' %}</a>
         </div>
     </div>
