fix: push ads on window load event

--- a/src/_includes/partials/ad.njk
+++ b/src/_includes/partials/ad.njk
@@ -8,7 +8,7 @@
     ></ins>
 </div>
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
+    window.addEventListener('load', () => {
         if (notAuthenticated) (adsbygoogle = window.adsbygoogle || []).push({});
     });
 </script>
