--- a/src/_includes/partials/search-bar.njk
+++ b/src/_includes/partials/search-bar.njk
@@ -1,4 +1,4 @@
-<form id="search-form">
+<form id="search-form" data-test-label="search-bar">
   <div role="search" class="searchbox__wrapper">
     <label class="fcc_sr_only" for='search-input'>
       {% t 'search.label' %}
