--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -20,12 +20,12 @@
         {% if author.location %}
             <div class="author-location">
                 {{ author.location }} 
-                <span class="bull">
-                    &bull;
-                </span>
             </div>
+            <span class="bull">
+                &bull;
+            </span>
         {% endif %}
-        <div class="author-stats">
+        <div class="author-stats" data-test-label="author-post-count">
             {% if postCount === 0 %}
                 {% t 'author.no-posts' %}
             {% elif postCount === 1 %}
@@ -33,10 +33,10 @@
             {% else %}
                 {% t 'author.multiple-posts', { postCount: postCount } %}
             {% endif %}
-            <span class="bull">
-                &bull;
-            </span>
         </div>
+        <span class="bull">
+            &bull;
+        </span>
         {% if author.website %}
             <a
                 class="social-link social-link-wb"
