--- a/src/_includes/partials/social-row.njk
+++ b/src/_includes/partials/social-row.njk
@@ -1,6 +1,6 @@
 {% set i18nSocialRowTwitterKey = 'social-row.author-has-twitter' if post.primary_author.twitter else 'social-row.author-no-twitter' %}
 
-<p data-test-label="social-row" class="social-row">
+<p data-test-label="social-row" class="social-row" data-test-label="social-row">
     {% t i18nSocialRowTwitterKey, {
         '<0>': '<a id="tweet-btn" class="cta-button">',
         '</0>': '</a>',
