feat: add basic and i18n related tests for the 404 page

--- a/src/404.njk
+++ b/src/404.njk
@@ -14,7 +14,7 @@ permalink: 404.html
     <div class="error-template">
         <main id="site-main" class="site-main outer">
             <div class="inner">
-                <section class="error-message">
+                <section class="error-message" data-test-label="error-message">
                     <h1 class="error-code">404</h1>
                     <p class="error-description">{% t '404.page-not-found' %}</p>
                     <a class="error-link" href="{{ site.url }}">{% t '404.go-to-front-page' %} →</a>
