--- a/src/_includes/layouts/feed.njk
+++ b/src/_includes/layouts/feed.njk
@@ -5,12 +5,12 @@
             <![CDATA[ freeCodeCamp.org ]]>
         </title>
         <description>
-            <![CDATA[ {% t 'meta:description' %} ]]>
+            <![CDATA[ {% t 'meta-tags:description' %} ]]>
         </description>
         <link>{{ site.url }}</link>
         <image>
             <url>{{ site.icon }}</url>
-            {% set metaTitle %}{% t 'meta:title' %}{% endset %}
+            {% set metaTitle %}{% t 'meta-tags:title' %}{% endset %}
             <title>{{ metaTitle | escape }}</title>
             <link>{{ site.url }}</link>
         </image>
@@ -36,7 +36,7 @@
                 <pubDate>{% buildDateFormatter site.timezone, post.published_at %}</pubDate>
                 <media:content url="{{ post.feature_image }}" medium="image" />
                 <content:encoded>
-                    <![CDATA[ {{ (post.excerpt | escape) if feed.path == "/" else (post.html | safe) }} ]]>
+                    <![CDATA[ {{ (post.excerpt | escape) if feed.path === "/" else (post.html | safe) }} ]]>
                 </content:encoded>
             </item>
         {% endfor %}
