--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -9,13 +9,13 @@
 {% block content %}
     <div class="under-header-content">
         <h1 data-test-label="tag-name" class="site-title tags-title">#{{ tag.name | upper }}</h1>
-        <h2 class="site-description">
+        <h2 class="site-description" data-test-label="tag-post-count">
             {% if postCount == 0 %}
-                {% t 'tag-page.collection-of-posts' %}
+                {% t 'tag.no-posts' %}
             {% elif postCount == 1 %}
-                {% t 'tag-page.one-post' %}
+                {% t 'tag.one-post' %}
             {% else %}
-                {% t 'tag-page.multiple-posts', { postCount: postCount } %}
+                {% t 'tag.multiple-posts', { postCount: postCount } %}
             {% endif %}
         </h2>
         
@@ -46,7 +46,7 @@
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ title }}">
-    <meta property="og:description" content="{% t 'meta:description' %}">
+    <meta property="og:description" content="{% t 'meta-tags:description' %}">
     <meta property="og:url" content="{{ site.url + tag.path }}">
     <meta property="og:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
@@ -54,7 +54,7 @@
     {# Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ title }}">
-    <meta name="twitter:description" content="{% t 'meta:description' %}">
+    <meta name="twitter:description" content="{% t 'meta-tags:description' %}">
     <meta name="twitter:url" content="{{ site.url + tag.path }}">
     <meta name="twitter:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
     <meta name="twitter:site" content="{{ site.twitter }}">
