--- a/src/_includes/partials/social-row.njk
+++ b/src/_includes/partials/social-row.njk
@@ -1,10 +1,13 @@
-<p data-test-label="social-row" class="social-row">
-    {% if post.primary_author.twitter %}
-        {% t 'social-row.author-has-twitter' %}
-        <a id='tweet-btn' class='cta-button'>{% t 'buttons.author-has-twitter' %}</a>
-    {% else %}
-        {% t 'social-row.author-no-twitter' %}, <a id='tweet-btn' class='cta-button'>{% t 'buttons.author-no-twitter' %}</a>
-    {% endif %}
+{% set i18nSocialRowTwitterKey = 'social-row.author-has-twitter' if post.primary_author.twitter else 'social-row.author-no-twitter' %}
+
+<p data-test-label="social-row" class="social-row" data-test-label="social-row">
+    {% t i18nSocialRowTwitterKey, {
+        '<0>': '<a id="tweet-btn" class="cta-button">',
+        '</0>': '</a>',
+        interpolation: {
+            escapeValue: false
+        }
+    } %}
 </p>
 
 {% block scripts %}
