--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -22,102 +22,132 @@
                 <div class="trending-guides-row">
                     <div class="footer-col footer-col-1">
                         <a href="{% t 'trending:article0link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article0title' %}
+                            {%- set article0title %}{% t 'trending:article0title' %}{% endset -%}
+                            {{ article0title | escape }}
                         </a>
                         <a href="{% t 'trending:article1link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article1title' %}
+                            {%- set article1title %}{% t 'trending:article1title' %}{% endset -%}
+                            {{ article1title | escape }}
                         </a>
                         <a href="{% t 'trending:article2link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article2title' %}
+                            {%- set article2title %}{% t 'trending:article2title' %}{% endset -%}
+                            {{ article2title | escape }}
                         </a>
                         <a href="{% t 'trending:article3link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article3title' %}
+                            {%- set article3title %}{% t 'trending:article3title' %}{% endset -%}
+                            {{ article3title | escape }}
                         </a>
                         <a href="{% t 'trending:article4link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article4title' %}
+                            {%- set article4title %}{% t 'trending:article4title' %}{% endset -%}
+                            {{ article4title | escape }}
                         </a>
                         <a href="{% t 'trending:article5link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article5title' %}
+                            {%- set article5title %}{% t 'trending:article5title' %}{% endset -%}
+                            {{ article5title | escape }}
                         </a>
                         <a href="{% t 'trending:article6link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article6title' %}
+                            {%- set article6title %}{% t 'trending:article6title' %}{% endset -%}
+                            {{ article6title | escape }}
                         </a>
                         <a href="{% t 'trending:article7link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article7title' %}
+                            {%- set article7title %}{% t 'trending:article7title' %}{% endset -%}
+                            {{ article7title | escape }}
                         </a>
                         <a href="{% t 'trending:article8link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article8title' %}
+                            {%- set article8title %}{% t 'trending:article8title' %}{% endset -%}
+                            {{ article8title | escape }}
                         </a>
                         <a href="{% t 'trending:article9link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article9title' %}
+                            {%- set article9title %}{% t 'trending:article9title' %}{% endset -%}
+                            {{ article9title | escape }}
                         </a>
                     </div>
                     <div class="footer-col footer-col-2">
                         <a href="{% t 'trending:article10link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article10title' %}
+                            {%- set article10title %}{% t 'trending:article10title' %}{% endset -%}
+                            {{ article10title | escape }}
                         </a>
                         <a href="{% t 'trending:article11link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article11title' %}
+                            {%- set article11title %}{% t 'trending:article11title' %}{% endset -%}
+                            {{ article11title | escape }}
                         </a>
                         <a href="{% t 'trending:article12link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article12title' %}
+                            {%- set article12title %}{% t 'trending:article12title' %}{% endset -%}
+                            {{ article12title | escape }}
                         </a>
                         <a href="{% t 'trending:article13link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article13title' %}
+                            {%- set article13title %}{% t 'trending:article13title' %}{% endset -%}
+                            {{ article13title | escape }}
                         </a>
                         <a href="{% t 'trending:article14link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article14title' %}
+                            {%- set article14title %}{% t 'trending:article14title' %}{% endset -%}
+                            {{ article14title | escape }}
                         </a>
                         <a href="{% t 'trending:article15link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article15title' %}
+                            {%- set article15title %}{% t 'trending:article15title' %}{% endset -%}
+                            {{ article15title | escape }}
                         </a>
                         <a href="{% t 'trending:article16link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article16title' %}
+                            {%- set article16title %}{% t 'trending:article16title' %}{% endset -%}
+                            {{ article16title | escape }}
                         </a>
                         <a href="{% t 'trending:article17link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article17title' %}
+                            {%- set article17title %}{% t 'trending:article17title' %}{% endset -%}
+                            {{ article17title | escape }}
                         </a>
                         <a href="{% t 'trending:article18link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article18title' %}
+                            {%- set article18title %}{% t 'trending:article18title' %}{% endset -%}
+                            {{ article18title | escape }}
                         </a>
                         <a href="{% t 'trending:article19link' %}" rel="noopener noreferrer" target="_blank">
-                            {% t 'trending:article19title' %}
+                            {%- set article19title %}{% t 'trending:article19title' %}{% endset -%}
+                            {{ article19title | escape }}
                         </a>
                     </div>
                     <div class="footer-col footer-col-3">
                         <div class="footer-left">
                             <a href="{% t 'trending:article20link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article20title' %}
+                                {%- set article20title %}{% t 'trending:article20title' %}{% endset -%}
+                                {{ article20title | escape }}
                             </a>
                             <a href="{% t 'trending:article21link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article21title' %}
+                                {%- set article21title %}{% t 'trending:article21title' %}{% endset -%}
+                                {{ article21title | escape }}
                             </a>
                             <a href="{% t 'trending:article22link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article22title' %}
+                                {%- set article22title %}{% t 'trending:article22title' %}{% endset -%}
+                                {{ article22title | escape }}
                             </a>
                             <a href="{% t 'trending:article23link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article23title' %}
+                                {%- set article23title %}{% t 'trending:article23title' %}{% endset -%}
+                                {{ article23title | escape }}
                             </a>
                             <a href="{% t 'trending:article24link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article24title' %}
+                                {%- set article24title %}{% t 'trending:article24title' %}{% endset -%}
+                                {{ article24title | escape }}
                             </a>
                         </div>
 
                         <div class="footer-right">
                             <a href="{% t 'trending:article25link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article25title' %}
+                                {%- set article25title %}{% t 'trending:article25title' %}{% endset -%}
+                                {{ article25title | escape }}
                             </a>
                             <a href="{% t 'trending:article26link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article26title' %}
+                                {%- set article26title %}{% t 'trending:article26title' %}{% endset -%}
+                                {{ article26title | escape }}
                             </a>
                             <a href="{% t 'trending:article27link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article27title' %}
+                                {%- set article27title %}{% t 'trending:article27title' %}{% endset -%}
+                                {{ article27title | escape }}
                             </a>
                             <a href="{% t 'trending:article28link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article28title' %}
+                                {%- set article28title %}{% t 'trending:article28title' %}{% endset -%}
+                                {{ article28title | escape }}
                             </a>
                             <a href="{% t 'trending:article29link' %}" rel="noopener noreferrer" target="_blank">
-                                {% t 'trending:article29title' %}
+                                {%- set article29title %}{% t 'trending:article29title' %}{% endset -%}
+                                {{ article29title | escape }}
                             </a>
                         </div>
                     </div>
