--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -6,8 +6,10 @@
 {% set codeinjection_head = post.codeinjection_head %}
 {% set codeinjection_foot = post.codeinjection_foot %}
 {% set adsEnabled = (secrets.adsEnabled === 'true') and (site.lang !== 'zh') %}
-{# Include 2 ads by default, and add 1 ad for every 2 mins of reading time #}
-{% set numOfSidebarAds = ((post.reading_time / 2) + 2) | round(0, 'floor') %}
+{# Include 2 ads by default for all articles. Then add 1 ad for every 2 mins of
+reading time if reading time <= 4 mins. Else, add 1 ad for every 1 min of reading
+time #}
+{% set numOfSidebarAds = (((post.reading_time / 2) if post.reading_time <= 4 else (post.reading_time)) + 2) | round(0, 'floor') %}
 
 {% block content %}
     <main id="site-main" class="post-template site-main outer">
