fix: add trailing slash to link URLs

--- a/src/_includes/layouts/feed.njk
+++ b/src/_includes/layouts/feed.njk
@@ -7,16 +7,16 @@
         <description>
             <![CDATA[ {% t 'meta-tags:description' %} ]]>
         </description>
-        <link>{{ site.url }}</link>
+        <link>{{ site.url + "/" }}</link>
         <image>
             <url>{{ site.icon }}</url>
             {% set metaTitle %}{% t 'meta-tags:title' %}{% endset %}
             <title>{{ (metaTitle | escape) if feed.path === "/" else (feed.name | safe + " - freeCodeCamp.org") }}</title>
-            <link>{{ site.url }}</link>
+            <link>{{ site.url + "/" }}</link>
         </image>
         <generator>Eleventy</generator>
         <lastBuildDate>{% buildDateFormatter site.timezone %}</lastBuildDate>
-        <atom:link href="{{ site.url }}" rel="self" type="application/rss+xml" />
+        <atom:link href="{{ site.url + '/' }}" rel="self" type="application/rss+xml" />
         <ttl>60</ttl>
         {% for post in feed.posts %}
             <item>
