--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -18,12 +18,12 @@
     {% endif %}
     <div class="author-meta">
         {% if author.location %}
-            <div class="author-location">
-                {{ author.location }} 
+            <div class="author-location" data-test-label="author-location">
+                {{ author.location }}
+                <span class="bull" data-test-label="bullet">
+                    &bull;
+                </span>
             </div>
-            <span class="bull">
-                &bull;
-            </span>
         {% endif %}
         <div class="author-stats" data-test-label="author-post-count">
             {% if postCount === 0 %}
@@ -33,10 +33,10 @@
             {% else %}
                 {% t 'author.multiple-posts', { postCount: postCount } %}
             {% endif %}
+            <span class="bull" data-test-label="bullet">
+                &bull;
+            </span>
         </div>
-        <span class="bull">
-            &bull;
-        </span>
         {% if author.website %}
             <a
                 class="social-link social-link-wb"
