--- a/src/_includes/layouts/feed.njk
+++ b/src/_includes/layouts/feed.njk
@@ -2,28 +2,29 @@
     xmlns:atom="http://www.w3.org/2005/Atom" xmlns:media="http://search.yahoo.com/mrss/" version="2.0">
     <channel>
         <title>
-            <![CDATA[ freeCodeCamp.org ]]>
+            <![CDATA[ {{ "freeCodeCamp.org" if feed.path === "/" else (feed.name | safe + " - freeCodeCamp.org") }} ]]>
         </title>
         <description>
             <![CDATA[ {% t 'meta-tags:description' %} ]]>
         </description>
-        <link>{{ site.url }}</link>
+        <link>{{ site.url + "/" }}</link>
         <image>
             <url>{{ site.icon }}</url>
             {% set metaTitle %}{% t 'meta-tags:title' %}{% endset %}
-            <title>{{ metaTitle | escape }}</title>
-            <link>{{ site.url }}</link>
+            <title>{{ (metaTitle | escape) if feed.path === "/" else (feed.name | safe + " - freeCodeCamp.org") }}</title>
+            <link>{{ site.url + "/" }}</link>
         </image>
+        <generator>Eleventy</generator>
         <lastBuildDate>{% buildDateFormatter site.timezone %}</lastBuildDate>
-        <atom:link href="{{ site.url }}" rel="self" type="application/rss+xml" />
+        <atom:link href="{{ site.url + '/' }}" rel="self" type="application/rss+xml" />
         <ttl>60</ttl>
         {% for post in feed.posts %}
             <item>
                 <title>
-                    <![CDATA[ {% fullEscaper post.title %} ]]>
+                    <![CDATA[ {{ post.title | safe }} ]]>
                 </title>
                 <description>
-                    <![CDATA[ {{ post.excerpt | escape }} ]]>
+                    <![CDATA[ {{ post.excerpt | safe }} ]]>
                 </description>
                 <link>{{ site.url + post.path }}</link>
                 <guid isPermaLink="false">{{ post.comment_id }}</guid>
@@ -36,7 +37,7 @@
                 <pubDate>{% buildDateFormatter site.timezone, post.published_at %}</pubDate>
                 <media:content url="{{ post.feature_image }}" medium="image" />
                 <content:encoded>
-                    <![CDATA[ {{ (post.excerpt | escape) if feed.path === "/" else (post.html | safe) }} ]]>
+                    <![CDATA[ {{ (post.excerpt | safe) if feed.path === "/" else (post.html | safe) }} ]]>
                 </content:encoded>
             </item>
         {% endfor %}
