fix: change tweet link to button for better accessibility

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2295,6 +2295,7 @@ p.footer-donation a:hover {
     margin-bottom: 1.5em;
 } */
 
+button.cta-button,
 a.cta-button {
   width: content;
   text-decoration: none;
