--- a/src/_includes/partials/social-row.njk
+++ b/src/_includes/partials/social-row.njk
@@ -2,8 +2,8 @@
 
 <p data-test-label="social-row" class="social-row" data-test-label="social-row">
     {% t i18nSocialRowTwitterKey, {
-        '<0>': '<a id="tweet-btn" class="cta-button">',
-        '</0>': '</a>',
+        '<0>': '<button id="tweet-btn" class="cta-button">',
+        '</0>': '</button>',
         interpolation: {
             escapeValue: false
         }
