feat: add tests, encode default tweet message

--- a/src/_includes/partials/social-row.njk
+++ b/src/_includes/partials/social-row.njk
@@ -2,7 +2,7 @@
 
 <p data-test-label="social-row" class="social-row">
     {% t i18nSocialRowTwitterKey, {
-        '<0>': '<button id="tweet-btn" class="cta-button">',
+        '<0>': '<button id="tweet-btn" class="cta-button" data-test-label="tweet-button">',
         '</0>': '</button>',
         interpolation: {
             escapeValue: false
