--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -106,7 +106,7 @@ body {
   color: #fff;
   width: 100%;
   background: var(--theme-color);
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-display: swap;
 }
 
@@ -259,7 +259,7 @@ a.nav-forum,
   padding: 7px 15px;
   color: #fff;
   opacity: 1;
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Roboto Mono', monospace;
   font-display: swap;
 }
 
@@ -495,7 +495,7 @@ a.nav-forum {
 }
 
 .post-card-excerpt {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-display: swap;
 }
 
@@ -811,7 +811,7 @@ make sure this only happens on large viewports / desktop-ish devices.
   margin: 0 auto;
   padding: 70px 150px 0;
   min-height: 230px;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-display: swap;
   font-size: 2.2rem;
   line-height: 1.6em;
@@ -820,7 +820,7 @@ make sure this only happens on large viewports / desktop-ish devices.
 
 /* Japanese font */
 .post-full-content:lang(ja) {
-  font-family: "Lato", "Noto Sans JP", sans-serif;
+  font-family: 'Lato', 'Noto Sans JP', sans-serif;
 }
 
 @media (max-width: 500px) {
@@ -1008,7 +1008,7 @@ Usage (In Ghost editor):
 }
 
 .post-full-content hr:after {
-  content: "";
+  content: '';
   position: absolute;
   top: -15px;
   left: 50%;
@@ -1028,8 +1028,8 @@ Usage (In Ghost editor):
 .post-full-content h5,
 .post-full-content h6 {
   color: var(--gray85);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-display: swap;
 }
 
@@ -1083,7 +1083,7 @@ Usage (In Ghost editor):
   padding: 1em 0 1.5em;
   border: 0;
   color: var(--dark-blue);
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-display: swap;
   font-size: 3.2rem;
   line-height: 1.35em;
@@ -1160,8 +1160,8 @@ Usage (In Ghost editor):
   width: auto;
   border-spacing: 0;
   border-collapse: collapse;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-display: swap;
   font-size: 1.6rem;
   white-space: nowrap;
@@ -1383,7 +1383,7 @@ pre.runkit-element {
 }
 
 .author-list-item .author-card:before {
-  content: "";
+  content: '';
   position: absolute;
   top: 100%;
   left: 50%;
@@ -1479,7 +1479,7 @@ pre.runkit-element {
 }
 
 .read-next-card:before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   right: 0;
@@ -1737,8 +1737,8 @@ pre.runkit-element {
 
 .post-full-content .kg-bookmark-container {
   display: flex;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-display: swap;
   color: var(--gray90);
   text-decoration: none;
@@ -1817,7 +1817,7 @@ pre.runkit-element {
 }
 
 .kg-bookmark-author:after {
-  content: "•";
+  content: '•';
   margin: 0 6px;
 }
 
@@ -1880,7 +1880,7 @@ pre.runkit-element {
   justify-content: center;
   align-items: center;
   margin: 0 0 10px 0;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-display: swap;
   font-style: italic;
 }
